fix: sonarqube list warnings